# hexsample

./: .buildinfo  .gitignore  Makefile  README.md  analysis.html  api.html  clustering.html  digi.html  display.html  fileio.html  fitting.html  genindex.html  hexagon.html  index.html  install.html  logbook_analysis_library.md  mc.html  modeling.html  objects.inv  pprint.html  py-modindex.html  pyproject.toml  readout.html  recon.html  release.html  requirements.txt  rng.html  roi.html  search.html  searchindex.js  sensor.html  setup.bat  setup.sh  source.html
.doctrees/: analysis.doctree  api.doctree  clustering.doctree  digi.doctree  display.doctree  environment.pickle  fileio.doctree  fitting.doctree  hexagon.doctree  index.doctree  install.doctree  mc.doctree  modeling.doctree  pprint.doctree  readout.doctree  recon.doctree  release.doctree  rng.doctree  roi.doctree  sensor.doctree  source.doctree
.github/workflows/: ghpdocs.yml  unittests.yml
_sources/: api.rst.txt  digi.rst.txt  display.rst.txt  fileio.rst.txt  fitting.rst.txt  hexagon.rst.txt  mc.rst.txt  modeling.rst.txt  pprint.rst.txt  recon.rst.txt  release.rst.txt  roi.rst.txt  source.rst.txt
docs/: analysis.rst  api.rst  clustering.rst  conf.py  digi.rst  fileio.rst  index.rst  io.rst  readout.rst  release.rst  rng.rst  sensor.rst
docs/macro/: docs_hexagon.py
examples/: simulate_grid.py
hexsample/: __init__.py  _version.py  analysis.py  app.py  buffer.py  clustering.py  digi.py  display.py  display_old.py  fileio.py  fitting.py  hexagon.py  hist.py  io.py  mc.py  modeling.py  pipeline.py  plot.py  pprint.py  readout.py  recon.py  rng.py  roi.py  sensor.py  shell.py  source.py  xpol.py
scripts/: analyze_grid.py  analyze_sim.py  simulate_grid.py  test_bench.py
src/hexsample/: clustering.py  digi.py  fileio.py  fitting.py  pipeline.py  recon.py
tests/: test_analysis.py  test_digi.py  test_fileio.py  test_hexagon.py  test_hist.py  test_io.py  test_lmfit.py  test_mc.py  test_mggpd.py  test_modeling.py  test_mugpd.py  test_optimize_sim.py  test_pipeline.py  test_plot.py  test_rng.py  test_roi.py  test_sensor.py  test_shell.py  test_source.py  test_xpol4.py  test_xraydb.py
tests/data/: nist_xcom_cdte.txt  nist_xcom_si.txt
tools/: release.py
